# kafka-http-monitor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: aiven-integration-test.yaml  check.yaml
data/: aiven-test-cerificate.pem
src/: consumer.py  kafkahelper.py  producer.py  url.py
src/kafka_http_monitor/: __init__.py  __version__.py  conftest.py  consumer.py  kafkahelper.py  producer.py  url.py
src/kafka_http_monitor/tests/: test_consumer.py  test_producer.py
src/tests/: test_producer.py
